# LibCMaker_ICU

./: .appveyor.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md  cmr_build_icu.cmake  cmr_build_icu_host_tools.cmake  lib_cmaker_icu.cmake
ci/: ci_lib_params.sh
cmake/: cmr_build_rules_icu.cmake  cmr_find_package_icu.cmake  cmr_find_package_icu_host_tools_custom.cmake  cmr_get_download_params_icu.cmake
cmake/modules/: FindICU.cmake  cmr_build_rules_icu.cmake  cmr_get_download_params_icu.cmake  cmr_icu_cmaker.cmake  cmr_icu_get_download_params.cmake
cmake/modules/icu-58.2/cmake/icu/source/i18n/: CMakeLists.txt
cmake/modules/icu-61.1/cmake/icu/: README_CMakeLists.txt
cmake/modules/icu-61.1/cmake/icu/source/: CMakeLists.txt  configure_2nd.cmake  icudefs.cmake
cmake/modules/icu-61.1/cmake/icu/source/data/: CMakeLists.txt
cmake/modules/icu-61.1/cmake/icu/source/i18n/: CMakeLists.txt
cmake/modules/icu-61.1/cmake/icu/source/stubdata/: CMakeLists.txt
cmake/modules/icu-61.1/icu/source/: CMakeLists.txt  common_icu_lib_flags.cmake  common_tools_exe_flags.cmake  configure_2nd.cmake  icudefs.cmake
cmake/modules/icu-61.1/icu/source/cmake/: Config.in.cmake
cmake/modules/icu-61.1/icu/source/common/: CMakeLists.txt
cmake/modules/icu-61.1/icu/source/data/: CMakeLists.txt
cmake/modules/icu-61.1/icu/source/i18n/: CMakeLists.txt
cmake/modules/icu-61.1/icu/source/io/: CMakeLists.txt
cmake/modules/icu-61.1/icu/source/layoutex/: CMakeLists.txt
cmake/modules/icu-61.1/icu/source/stubdata/: CMakeLists.txt
cmake/modules/icu-61.1/icu/source/tools/ctestfw/: CMakeLists.txt
cmake/modules/icu-61.1/icu/source/tools/toolutil/: CMakeLists.txt
cmake/modules/icu-61.1/patches/icu/source/tools/pkgdata/: pkgdata.cpp
cmake/modules/icu-common/cmake/icu/source/common/: CMakeLists.txt
cmake/modules/icu-common/cmake/icu/source/tools/: CMakeLists.txt
cmake/modules/icu/cmake/icu/source/io/: icu-58.2-source_files.cmake
cmake/modules/icu/cmake/icu/source/tools/gennorm2/: icu-58.2-source_files.cmake
cmake/modules/icu/cmake/icu/source/tools/genrb/: icu-58.2-source_files.cmake
cmake/modules/icu/source/stubdata/: icu-58.2-source_files.cmake
cmake/modules/icu/source/tools/toolutil/: icu-58.2-source_files.cmake
example/TestCompileWithICU/: CMakeLists.txt  README.md
example/TestCrossCompileWithICU/CrossBuildLibrary/: CMakeLists.txt
patch/icu/: CMakeLists.txt  README.md
patch/icu/source/: CMakeLists.txt  configure_2nd.cmake  icudefs.cmake
patch/icu/source/common/: CMakeLists.txt
patch/icu/source/data/: CMakeLists.txt
patch/icu/source/i18n/: CMakeLists.txt  ICU-62.1-source_files.cmake
patch/icu/source/io/: CMakeLists.txt
patch/icu/source/layoutex/: CMakeLists.txt
patch/icu/source/stubdata/: CMakeLists.txt
patch/icu/source/tools/ctestfw/: CMakeLists.txt
patch/icu/source/tools/toolutil/: CMakeLists.txt
samples/TestCompileWithICU/: CMakeLists.txt
samples/TestCompileWithICU/host_tools/: CMakeLists.txt
samples/TestCompileWithICU/src/: example_test.cpp
samples/TestCompileWithICU/test/: CMakeLists.txt
samples/TestCrossCompileWithICU/BuildHostTools/: CMakeLists.txt
samples/TestCrossCompileWithICU/CrossBuildLibrary/: CMakeLists.txt
samples/ci_sample/: CMakeLists.txt
samples/ci_sample/host_tools/: CMakeLists.txt
samples/ci_sample/src/: uprint.c  uprint.h
samples/ci_sample/test/: CMakeLists.txt
